# MLask

./: .gitignore  CMakeLists.txt  Mat.cpp  Mat.h  Mat.test.cpp  README.md  makefile
headers/: Layer.hpp  Model.hpp
include/: Layer.hpp  Model.hpp  types.hpp
src/: ActivationFunctions.h  Layers.h  LossFunctions.h  Mat.cpp  Mat.h  Model.cpp  Tensor.cpp  Tensor.h  Vector.cpp  Vector.h  declarations.h  mlask.h  types.h
test/: Mat.cpp  Tensor.cpp
tests/: CMakeLists.txt  Layer.cpp
